--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dhkdtld37-hello-vue.github.io",
   "version": "0.3.1",
-  "private": true,
+  "private": false,
   "type": "module",
   "scripts": {
     "dev": "vite",
