--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.7.2",
+    "json-server": "^1.0.0-alpha.23",
     "vue": "^3.3.11"
   },
   "devDependencies": {
